--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiqrIen8rWQrvJsu-7f4rOta0fmI5r2SI"></script> -->
     <!--build:js assets/js/triptip-plugins.min.js -->
     <script src="assets/js/jquery-ui.min.js"></script>
-    <script src="assets/js/select2.min.js"></script>
+    <!-- <script src="assets/js/select2.min.js"></script> -->
     <script src="assets/js/jquery.imagesloaded.min.js"></script>
     <script src="assets/js/jquery.isotope.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
